# bitbang-hal

./: Cargo.toml
examples/: i2c-eeprom24x.rs  serial.rs
src/: i2c.rs  serial.rs  spi.rs
